=head1 April 26, 1997

Improved a test for mSQL-2 to print better diagnostics.

FAQ.html not generated anymore after pod2html has been broken for
automated use in perl5.004.

=head1 April 22, 1997

Fixed test 61 for the NeXT (OS 3.2) which has its own atof function
that translates "N/A" (actually any string matching /^[INSins]/) into
NaN silently which caused test 61 to fail.

=head1 March 22, 1997

Added support for new data types in 2.0B5.

Made MsqlPerl again compatible with perl5.002.

Added getsequenceinfo method.

Added getserverstats, but left it undocumented, as I expect that this
API is not the final word on it.

Added the four date/time conversion functions. unixtimetodate,
unixtimetotime, datetounixtime, timetounixtime. The latter two do not
work on my machine due to strptime. So I backed them out again. They
can be activated by running

    perl Makefile.PL DEFINE=-DHAVE_STRPTIME

Introduced a small detection of which server we're running under in
pmsql.

=head1 March 20, 1997

Applied patch from Hugo van der Sanden E<lt>hv@iii.co.ukE<gt> to
support NULL in the quote method.

Followed a suggestion by Vivek Khera to support a second parameter to
the quote method.

Updated the test suite because the mSQL-2.0B5 has new reserved words
and I did in fact use "time" as a column name :-(

=head1 December 21, 1996

Improved documentation about mSQL-2.

=head1 September 28, 1996

Fixed a completion buglet again: "select * from table where <TAB>"
resulted in table completion instead of field completion.

=head1 September 8, 1996

Fixed another completion buglet in pmsql (complete-table-or-field
chose to query an inexistant statement handle in some cases).

Msql::Statement now 'use strict' clean, except for the autoloader.

Added my recent posting about 'insert' closures to the FAQ.

Reformatted both Changes and FAQ (Hi, Doug!).

As I'm one of the privileged people getting prereleases of Msql2, I
have already added support for Msql2 into this release. Things are