@@ -2,7 +2,10 @@
 
 No.
 
-=head2 How should I install Msql, so that I can work with mSQL-1 and mSQL-2 on need?
+
+
+=head2 How should I install Msql, so that I can work with mSQL-1 and
+mSQL-2 on demand?
 
 You have to store the two modules in different places and take care
 which one you want to use. You could do it with the following shell
@@ -27,14 +30,45 @@ and you talk to mSQL-2 by running
 
     perl -I/usr/local/Hughes/perl yourprogram
 
-Or you insert the library location in your own program with
+The invocations differ in the @INC path (see man perlvar) such that
+only the correct library for the desired version can get loaded. Once
+again: you have to make sure yourself, that the correct library is
+loaded, otherwise you cannot connect to the database.
 
-    use lib '/usr/local/Minerva/perl';
+Perl decides to load a library at compile time of the statement
+'use Msql' (see man perlfunc/use). Your @INC path at that moment
+decides upon which version you get.
 
-After above procedure the two installed pmsql(1) programs are
+Alternatively to the above you could insert the library location in
+your own program with
+
+    use lib '/usr/local/Minerva/perl'; # change @INC at compile time
+
+After the above descibed steps the two installed pmsql(1) programs are
 identical. You could insert such a 'use lib' statement in each of them
 to have them talk to the appropriate server. Or you call them as perl
 programs the same way as "yourprogram" above.
+
+
+
+=head2 I get: Can't call method ... without a package or object reference
+
+Run your script with the -w switch or test your connect and query
+statements on success or failure.
+
+    #WRONG:
+    $db = Msql->connect();
+
+    #RIGHTish:
+    $db = Msql->connect or die "Couldn't connect to....: $Msql::db_errstr";
+
+    #WRONG:
+    $sth = $db->query("some query");
+
+    #RIGHTish:
+    $sth = $db->query("some query") or die "Query failed: $Msql::db_errstr";
+
+
 
 =head2 I don't understand how you retrieve the data from a SELECT Query with Msql Perl.
 
@@ -55,10 +89,14 @@ the mailing list by writing to msqlperl@franz.ww.tu-berlin.de. Wait
 for the answer. Keep subscribed to the mailing list and answer the
 same question as soon as somebody else asks it.
 
+
+
 =head2 How do I get the names of the fields after a listfields?
 
 Please, read the manpage. Type 'man Msql' and if that doesn't help,
 try 'perldoc Msql'.
+
+
 
 =head2 Where can I find more documentation?
 
@@ -68,6 +106,8 @@ able to read it with 'man Msql'. On other operating systems try
 things out. The most recent addition is the pmsql program which may
 also help you to learning by example.
 
+
+
 =head2 HPUX compilation goes wrong!!!
 
      From: Yiorgos Adamopoulos <Y.Adamopoulos@noc.ntua.gr>
@@ -75,6 +115,8 @@ also help you to learning by example.
      I successfully compiled MsqlPerl for a HP817 (HP-UX 9.04/s800) using Perl5.002,
      msql-1.0.14 and gcc-2.7.2.  I added CC_ONLY = -fPIC to site.mm after running
      setup.
+
+
 
 =head2 How do I retrieve fields by name?
 
@@ -151,6 +193,7 @@ is a terrible waste.
      });
 
 
+
 =head2 Dynamic Loading
 
 Hello I am running XXX and would really like to use Msqlperl but I am
@@ -169,6 +212,7 @@ get an operating system that supports dynamic loading. With Linux it's
 already quite standard to have dynamic loading, and so is with many
 other OSs. Check out the newgroups for your OS and consult the FAQs
 there.
+
 
 
 =head2 How can I construct an insert statement from an array?
@@ -228,4 +272,146 @@ me that including it is a good thing.
 	    $sth = $dbh->query($query) or die Msql->errmsg;
 	}
     }
+
+We also got email from Doug Wilson who pounded on the icc method:
+
+    Date: Thu, 1 May 1997 14:23:31 -0500 (CDT)
+    From: Doug Wilson <doug@hurl.net>
+    To: msqlperl@franz.ww.tu-berlin.de
+
+    After debugging the sample insert function from the installation FAQ,
+    I added an extra feature; now not only are strings automatically quoted
+    correctly (as before), they are also truncated to their database length.
+
+    my sample:
+    #!/usr/bin/perl
+    # tabstop=4
+
+    use lib '/usr/local/Minerva/perl';
+    use Msql;
+
+    sub Msql::icc
+    {
+	my($db,$table,@fields)=@_;
+	my($s,@types)=$db->listfields($table) or die Msql->errmsg;
+	my $tfld_idx = 0;
+	if (@fields){
+	    # The user wants to input the fields in a different order
+	    my(@tfields,@ttypes,@tlengths,%tmptypes,%tmplengths,$fieldname);
+	    @tfields = $s->name;
+	    @ttypes = $s->type;
+	    @tmptypes{@tfields} = @ttypes;
+	    @tlengths = $s->length;
+	    @tmplengths{@tfields} = @tlengths;
+	    foreach $fieldname (@fields) {
+		$types[$tfld_idx]=$tmptypes{$fieldname};
+		$lengths[$tfld_idx++]=$tmplengths{$fieldname};
+	    }
+	} else {
+	    # They are gonna give the arguments in table's order
+	    @fields = $s->name;
+	    @types = $s->type;
+	    @lengths = $s->length;
+	}
+	# return a subroutine reference.
+	sub {
+	    my(@arr)=@_;
+	    return join " ",
+	    "insert into $table",
+		$tfld_idx > 0 ?
+		join(" ", "(", join(",", @fields), ")") : "",
+		"values (",
+		join(",",
+		     map {
+			 defined $arr[$_] ?
+			     $types[$_] == &Msql::REAL_TYPE
+				 ||
+			     $types[$_] == &Msql::INT_TYPE ?
+				 $arr[$_]+0 :
+				     Msql->quote(
+					substr($arr[$_],0,$lengths[$_]))
+			    :
+			     "NULL"
+				     }
+		     0..$#types
+		    ),
+		    ")\n";
+	}
+    }
+
+    #Sample Usage
+    my ($regfile) = "7094.reg";
+    my(%regvars,%dbvars);
+
+    #Read in keys & values
+    if (open (REGFILE, "<$regfile"))
+    {
+	while (<REGFILE>)
+	{
+	    $line = $_;
+	    chomp($line);
+	    ($key, $value) = split(/=/, $line);
+	    $regvars{$key} = $value;
+	}
+
+	close (REGFILE);
+    }
+
+    #Do the file to database field translation
+    $dbvars{user}=$regvars{Pppname};
+    $dbvars{lname}=$regvars{LastName};
+    $dbvars{fname}=$regvars{FirstName};
+    $dbvars{address1}=$regvars{Address};
+    $dbvars{address2}=$regvars{Address1};
+    $dbvars{city}=$regvars{City};
+    $dbvars{state}=$regvars{State};
+    $dbvars{zip}=$regvars{Zip};
+    $dbvars{country}=$regvars{Country};
+    $dbvars{hphone}=$regvars{Phone};
+    $dbvars{email}=$regvars{EmailName};
+    $dbvars{epasswd}=$regvars{EmailPassword};
+    $dbvars{ppp}=$regvars{PppName};
+    $dbvars{ppasswd}=$regvars{PppPassword};
+    $dbvars{regcode}=$regvars{RegCode};
+    $dbvars{serial}=$regvars{RegNumber};
+
+    $dbh=Msql->connect("","ispreg");
+    my @fnames = keys(%dbvars);
+    my $f=$dbh->icc("customers", @fnames);
+    my(@info,$query,$sth);
+    @info = values(%dbvars);
+
+    $query = &$f(@info);
+    $sth = $dbh->query($query) or die Msql->errmsg;
+    ----------------------------------------------------------------------
+    To unsubscribe from this list send a message containing "unsubscribe"
+    to msqlperl-request@franz.ww.tu-berlin.de
+
+
+
+=head2 What can I do if I can't connect to local msql server
+
+    Date: Sun, 27 Apr 1997 15:52:16 -0400 (EDT)
+    From: Mark-Jason Dominus <mjd@plover.com>
+    To: msql-list@Bunyip.Com
+    Subject: Re: [mSQL] linux: can't connect to local msql server
+
+    On Sun, 27 Apr 1997, Rob Hill wrote:
+    > I have the msql.sock devices in my /usr/local/Hughes dir but I cannot
+    > connect to msql locally.
+
+    When I installed msql2, it put the socket into
+    /usr/local/Hughes/msql.sock, but the perl Msql.pm module wanted to
+    find it under /dev/msql.  I made a symbolic link from /dev/msql to
+    /usr/local/Hughes/msql.sock.
+
+    I did
+
+	    strace -o /tmp/msqlperl perl testprogram
+	    grep connect /tmp/msqlperl 
+
+    to find out where Msql was looking for the socket file.
+
+    mjd@pobox.com                                             Mark-Jason Dominus
+    mjd@plover.com                              Plover Systems, Philadelphia, PA
 
